--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,6 +9,14 @@
 </head>
 <body>
   <main class="container login-wrap">
+    <div class="topbar">
+      <h1>AIDOME</h1>
+      <div class="row">
+        <a class="link-btn" href="/company-search">업체검색</a>
+        <a class="link-btn" href="/">전략 수립</a>
+        <a class="link-btn" href="/admin">운영 콘솔</a>
+      </div>
+    </div>
     <section class="card login-card">
       <h1>관리자 로그인</h1>
       <p class="muted">데이터 관리 기능은 로그인한 관리자만 사용할 수 있습니다.</p>
@@ -21,7 +29,6 @@
 
       <div class="row">
         <button id="loginBtn">로그인</button>
-        <a class="link-btn" href="/">메인으로</a>
       </div>
 
       <pre id="loginResult">로그인이 필요합니다.</pre>
